updating with avatar pic

--- a/team_builder/accounts/templates/accounts/user_update_form.html
+++ b/team_builder/accounts/templates/accounts/user_update_form.html
@@ -1,28 +1,25 @@
 {% extends "layout.html" %}
 
 {% block body_content %}
-<div class="bounds circle--page">
+<form method="post" enctype="multipart/form-data" class="bounds circle--page">
+    {% csrf_token %}
+    <!--submit btn-->
     <div class="circle--page--header circle--fluid">
         <div class="circle--fluid--cell circle--fluid--primary">
             <h2>Profile</h2>
         </div>
         <div class="circle--fluid--cell circle--fluid--secondary">
-            <a class="button icon-on-left" href="{% url 'accounts:edit_profile' pk=user.pk %}">Edit</a>
+            <input type="submit" class="button button-primary icon-on-left" value="Save Changes">
         </div>
     </div>
 
     <div class="grid-70">
-        <h1>{% if user.display_name %}
-                {{ user.display_name }}
-            {% else %}
-                Your name (edit to add)
-            {% endif %}</h1>
+        <!--<input type="text" value="Wendy McElroy" placeholder="Full Name" class="circle&#45;&#45;input&#45;&#45;h1">-->
+        <div class="circle&#45;&#45;input&#45;&#45;h1">
+            {{ form.display_name }}
+        </div>
         <div class="circle--article--body">
-            {% if user.bio %}
-                {{ user.bio }}
-            {% else %}
-                Your bio (edit to add)
-            {% endif %}
+        {{ form.bio }}
         </div>
 
         <h2>Past Projects</h2>
@@ -56,33 +53,38 @@
 
     <div class="grid-25 grid-push-5">
 
-        <div class="circle--secondary--module">
-            <div class="circle--primary--avatar">
-
-            </div>
+      <div class="circle--secondary--module">
+        <div class="circle--primary--avatar">
+          <a class="button">
+            Upload Photo
+            {{ form.avatar }}
+          </a>
         </div>
+      </div>
 
-        <div class="circle--secondary--module">
-            <h4>My Skills</h4>
-            <ul class="unloaded">
-                <li>Skill 1</li>
-                <li>Skill 2</li>
-                <li>Skill 3</li>
-                <li>Skill 4</li>
-                <li>Skill 5</li>
-            </ul>
-        </div>
+      <div class="circle--secondary--module">
+        <h4>My Skills</h4>
+        <ul class="circle--clone--list">
+          <li>
+            <input type="text" placeholder="Skill" />
+            <a class="circle--clone--add">Add Skill</a>
+            <a class="circle--clone--remove">Remove</a>
+          </li>
+        </ul>
+      </div>
 
-        <div class="circle--secondary--module">
-            <h4>My Projects</h4>
-            <ul class="circle--link--list">
-                <li><a>Project 1</a></li>
-                <li><a>Project 2</a></li>
-                <li><a>Project 3</a></li>
-                <li><a>Project 4</a></li>
-            </ul>
-        </div>
+      <div class="circle--secondary--module">
+        <h4>My Projects</h4>
+        <ul class="circle--clone--list">
+          <li>
+            <input type="text" placeholder="Project Name" />
+            <input type="text" placeholder="Project URL" />
+            <a class="circle--clone--add">Add Project</a>
+            <a class="circle--clone--remove">Remove</a>
+          </li>
+        </ul>
+      </div>
     </div>
 
-</div>
+</form>
 {% endblock %}
