--- a/team_builder/accounts/templates/accounts/profile.html
+++ b/team_builder/accounts/templates/accounts/profile.html
@@ -75,10 +75,9 @@
         <div class="circle--secondary--module">
             <h4>My Projects</h4>
             <ul class="circle--link--list">
-                <li><a>Project 1</a></li>
-                <li><a>Project 2</a></li>
-                <li><a>Project 3</a></li>
-                <li><a>Project 4</a></li>
+                {% for project in user.projects.all %}
+                    <li><a href="#">{{ project.title }}</a></li>
+                {% endfor %}
             </ul>
         </div>
     </div>
