--- a/team_builder/projects/templates/projects/project_list.html
+++ b/team_builder/projects/templates/projects/project_list.html
@@ -51,7 +51,7 @@
 
                 <td class="circle--cell--right">
                     {% for position in project.positions.all %}
-                        <p class="secondary-label">{{ position.title }}</p>
+                        <p class="secondary-label">{{ position }}</p>
                     {% endfor %}
                 </td>
 
