--- a/team_builder/projects/templates/projects/project_form.html
+++ b/team_builder/projects/templates/projects/project_form.html
@@ -1,50 +1,61 @@
 {% extends "layout.html" %}
 
 {% block body_content %}
-<div class="circle--actions--bar">
-    <div class="bounds">
-      <div class="grid-100">
-        <a class="button button-primary" href="project.html">Save Project</a>
-        <a class="button button-text" href="index.html">Discard</a>
-      </div>
-    </div>
-  </div>
 
-  <div class="bounds circle--page circle--article">
-    <div class="grid-70">
-      <div class="circle--article--body">
-        <input type="text" class="circle--input--h1" placeholder="Project Title" />
-        <textarea placeholder="Project description..."></textarea>
-      </div>
-
-      <div class="circle--project--positions">
-        <h2>Positions</h2>
-
-        <ul class="circle--group--list circle--clone--list">
-          <li>
-            <input type="text" class="circle--input--h3" placeholder="Position Title" />
-            <textarea placeholder="Position description..."></textarea>
-            <a class="circle--clone--add">Add Position</a>
-            <a class="circle--clone--remove">Remove</a>
-          </li>
-        </ul>
-        <a class="button button-primary" href="project.html">Save Project</a>
-
-      </div>
+<form action="" method="post">
+    {% csrf_token %}
+    <div class="circle--actions--bar">
+        <div class="bounds">
+            <div class="grid-100">
+                <input type="submit" class="button button-primary" value="Save Project"/>
+                <a class="button button-text" href="{% url 'projects:all' %}">Discard</a>
+            </div>
+        </div>
     </div>
 
-    <div class="grid-25 grid-push-5">
+    <div class="bounds circle--page circle--article">
 
-      <div class="circle--secondary--module">
-        <h3>Project Timeline</h3>
-        <textarea placeholder="Time estimate" class="circle--textarea--input"></textarea>
-      </div>
+        <div class="grid-70">
+            <div class="circle--article--body">
+                {{ form.title }}
+                {{ form.description }}
+            </div>
 
-      <div class="circle--secondary--module">
-        <h3>Applicant Requirements</h3>
-        <textarea></textarea>
-      </div>
+            <div class="circle--project--positions">
+                <h2>Positions</h2>
 
+                <ul class="circle--group--list circle--clone--list">
+                    {{ positions.management_form }}
+                    {% for form in positions.forms %}
+                    <li>
+                        {% for field in form %}
+                            {{ field.label_tag }} {{ field }}
+                        {% endfor %}
+                        <br>
+                        <a class="circle--clone--add">Add Position</a>
+                        <a class="circle--clone--remove">Remove</a>
+                    </li>
+                    {% endfor %}
+                </ul>
+                <a class="button button-primary" href="project.html">Save Project</a>
+
+            </div>
+        </div>
+
+        <div class="grid-25 grid-push-5">
+
+            <div class="circle--secondary--module">
+                <h3>Project Timeline</h3>
+                {{ form.time_line_description }}
+            </div>
+
+            <div class="circle--secondary--module">
+                <h3>Applicant Requirements</h3>
+                {{ form.applicant_req }}
+            </div>
+
+        </div>
     </div>
-  </div>
+</form>
+
 {% endblock %}
