--- a/team_builder/projects/templates/projects/project_form.html
+++ b/team_builder/projects/templates/projects/project_form.html
@@ -28,16 +28,17 @@
                     {{ positions.management_form }}
                     {% for form in positions.forms %}
                     <li>
-                        {% for field in form %}
-                            {{ field.label_tag }} {{ field }}
-                        {% endfor %}
+                        <!--{% for field in form %}-->
+                            <!--{{ field.label_tag }} {{ field }}-->
+                        <!--{% endfor %}-->
+                        {{ form }}
                         <br>
                         <a class="circle--clone--add">Add Position</a>
                         <a class="circle--clone--remove">Remove</a>
                     </li>
                     {% endfor %}
                 </ul>
-                <a class="button button-primary" href="project.html">Save Project</a>
+                <input type="submit" class="button button-primary" value="Save Project"/>
 
             </div>
         </div>
