--- a/team_builder/projects/templates/projects/project_detail.html
+++ b/team_builder/projects/templates/projects/project_detail.html
@@ -39,15 +39,6 @@
                             <!--todo: here-->
                             {% endif %}
                         </li>
-                        <li>
-                            <h3>Designer</h3>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut
-                                labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
-                                laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in
-                                voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat
-                                non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-                            <a class="button button-primary button-inactive">Position Filled</a>
-                        </li>
                     {% endfor %}
 
                 </ul>
@@ -59,8 +50,9 @@
         <div class="circle--secondary--module">
             <h3>Project Needs</h3>
             <ul class="circle--link--list">
-                <li><a>iOS Developer</a></li>
-                <li><a>Designer</a></li>
+                {% for position in project.positions.all %}
+                    <li><a>{{ position }}</a></li>
+                {% endfor %}
             </ul>
         </div>
 
