--- a/team_builder/projects/templates/projects/project_detail.html
+++ b/team_builder/projects/templates/projects/project_detail.html
@@ -6,7 +6,7 @@
         <div class="circle--actions--bar">
         <div class="bounds">
             <div class="grid-100">
-                <a class="button" href="project_edit.html">Edit Project</a>
+                <a class="button" href="{% url 'projects:edit_project' pk=project.pk %}">Edit Project</a>
                 <a class="button button-text" href="index.html">Delete Project</a>
             </div>
         </div>
