--- a/team_builder/templates/layout.html
+++ b/team_builder/templates/layout.html
@@ -40,24 +40,28 @@
                 <h1 class="hide-text circle--logo"><a class="logo" href="{% url 'home' %}">Circle</a></h1>
             </div>
             <div class="circle--fluid--cell circle--fluid--primary">
-                <div class="circle--search">
-                    <input type="text" placeholder="Search Projects..."/>
-                    <button>
-                        <svg version="1.1" class="search" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 12 12" xml:space="preserve">
-                <path d="M12,10.6L8.3,6.9C8.7,6.2,9,5.4,9,4.5C9,2,7,0,4.5,0S0,2,0,4.5S2,9,4.5,9c0.9,0,1.7-0.3,2.4-0.7l3.7,3.7L12,10.6z M2,4.5
-                C2,3.1,3.1,2,4.5,2S7,3.1,7,4.5C7,5.9,5.9,7,4.5,7S2,5.9,2,4.5z"/>
-              </svg>
-                    </button>
-                </div>
+
+                <section class="circle--search">
+                    <form action="{% url 'projects:all' %}" method="GET">
+                        <input type="search" name="q" placeholder="Search Projects..."/>
+                        <button type="submit">
+                            <svg version="1.1" class="search" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 12 12" xml:space="preserve">
+                            <path d="M12,10.6L8.3,6.9C8.7,6.2,9,5.4,9,4.5C9,2,7,0,4.5,0S0,2,0,4.5S2,9,4.5,9c0.9,0,1.7-0.3,2.4-0.7l3.7,3.7L12,10.6z M2,4.5
+                                C2,3.1,3.1,2,4.5,2S7,3.1,7,4.5C7,5.9,5.9,7,4.5,7S2,5.9,2,4.5z"/>
+                            </svg>
+                        </button>
+
+                    </form>
+                </section>
             </div>
             <div class="circle--fluid--cell circle--fluid--secondary">
                 <nav>
                     <ul class="circle--inline">
                         {% if user.is_authenticated %}
-                        <li><a href="{% url 'accounts:logout' %}" class="btn btn-simple">Log out</a></li>
+                            <li><a href="{% url 'accounts:logout' %}" class="btn btn-simple">Log out</a></li>
                         {% else %}
-                        <li><a href="{% url 'login' %}" class="btn btn-simple">Log in</a></li>
-                        <li><a href="{% url 'accounts:signup' %}" class="btn btn-simple">Sign up</a></li>
+                            <li><a href="{% url 'login' %}" class="btn btn-simple">Log in</a></li>
+                            <li><a href="{% url 'accounts:signup' %}" class="btn btn-simple">Sign up</a></li>
                         {% endif %}
                     </ul>
                 </nav>
@@ -66,24 +70,24 @@
     </div>
 </header>
 {% if user.is_authenticated %}
-<div class="circle--actions--bar">
-    <nav class="bounds">
-        <ul class="circle--pill--list">
-            <li>
-                <a class="{% if '/accounts/applications/' in request.path %} selected {% endif %}"
-                   href="applications.html">
-                    Applications
-                </a>
-            </li>
-            <li>
-                <a class="{% if '/accounts/profile/' in request.path %} selected {% endif %}"
-                   href="{% url 'accounts:profile' pk=user.pk %}">
-                    Profile
-                </a>
-            </li>
-        </ul>
-    </nav>
-</div>
+    <div class="circle--actions--bar">
+        <nav class="bounds">
+            <ul class="circle--pill--list">
+                <li>
+                    <a class="{% if '/accounts/applications/' in request.path %} selected {% endif %}"
+                       href="{% url 'projects:applications' %}">
+                        Applications
+                    </a>
+                </li>
+                <li>
+                    <a class="{% if '/accounts/profile/' in request.path %} selected {% endif %}"
+                       href="{% url 'accounts:profile' pk=user.pk %}">
+                        Profile
+                    </a>
+                </li>
+            </ul>
+        </nav>
+    </div>
 {% endif %}
 {% block body_content %}{% endblock %}
 </body>
