filtering applications by my project selected

--- a/team_builder/templates/layout.html
+++ b/team_builder/templates/layout.html
@@ -74,7 +74,7 @@
         <nav class="bounds">
             <ul class="circle--pill--list">
                 <li>
-                    <a class="{% if '/accounts/applications/' in request.path %} selected {% endif %}"
+                    <a class="{% if '/projects/applications/' in request.path %} selected {% endif %}"
                        href="{% url 'projects:applications' %}">
                         Applications
                     </a>
