--- a/team_builder/projects/templates/projects/application_list.html
+++ b/team_builder/projects/templates/projects/application_list.html
@@ -16,8 +16,15 @@
                     <li><a class="selected">New Applications</a></li>
                     <li><a class="selected">Accepted</a></li>
                     <li><a class="selected">Rejected</a></li>
-
-
+                </ul>
+            </div>
+            <div class="circle--filter circle--secondary--module">
+                <h4>My Projects</h4>
+                <ul class="circle--filter--list">
+                    <li><a class="selected">All Projects</a></li>
+                    {% for my_pro in user.projects.all %}
+                        <li><a href="?p={{ my_pro.pk }}" class="">{{ my_pro.title }}</a></li>
+                    {% endfor %}
                 </ul>
             </div>
         </div>
@@ -43,15 +50,10 @@
                         </td>
 
                         <td class="circle--cell--right">
-                            {% for position in project.positions.all %}
-                                <p class="secondary-label">{{ position.position_title }}</p>
-                            {% endfor %}
+                            {{ application.position.position_title }}
                         </td>
-
                     </tr>
                 {% endfor %}
-
-
                 </tbody>
             </table>
         </div>
