--- a/team_builder/projects/templates/projects/project_detail.html
+++ b/team_builder/projects/templates/projects/project_detail.html
@@ -7,7 +7,7 @@
         <div class="bounds">
             <div class="grid-100">
                 <a class="button" href="{% url 'projects:edit_project' pk=project.pk %}">Edit Project</a>
-                <a class="button button-text" href="index.html">Delete Project</a>
+                <a class="button button-text" href="{% url 'projects:delete' pk=project.pk %}">Delete Project</a>
             </div>
         </div>
     </div>
