--- a/team_builder/accounts/templates/accounts/profile.html
+++ b/team_builder/accounts/templates/accounts/profile.html
@@ -2,85 +2,61 @@
 {% load static %}
 
 {% block body_content %}
-<div class="bounds circle--page">
-    <div class="circle--page--header circle--fluid">
-        <div class="circle--fluid--cell circle--fluid--primary">
-            <h2>Profile</h2>
-        </div>
-        <div class="circle--fluid--cell circle--fluid--secondary">
-            <a class="button icon-on-left" href="{% url 'accounts:edit_profile' pk=user.pk %}">Edit</a>
-        </div>
-    </div>
-
-    <div class="grid-70">
-        <h1>{% if user.display_name %}
-            {{ user.display_name }}
-            {% else %}
-            Your name (edit to add)
-            {% endif %}</h1>
-        <div class="circle--article--body">
-            {% if user.bio %}
-            {{ user.bio }}
-            {% else %}
-            Your bio (edit to add)
-            {% endif %}
-        </div>
-
-        <h2>Past Projects</h2>
-        <table class="u-full-width circle--table">
-            <thead>
-            <tr>
-                <th>Project Title</th>
-                <th class="circle--cell--right">Project Needs</th>
-            </tr>
-            </thead>
-            <tbody>
-            {% for project in user.projects.all %}
-            {% if project.concluded %}
-            <tr class="clickable-row" data-href="project.html">
-                <td>
-                    <h3>{{ project.title }}</h3>
-                </td>
-                <td class="circle--cell--right">
-                    {% for position in project.positions.all %}
-                    <span class="secondary-label">{{ position }}</span>
-                    {% endfor %}
-                </td>
-            </tr>
-            {% endif %}
-            {% endfor %}
-            </tbody>
-        </table>
-    </div>
-
-    <div class="grid-25 grid-push-5">
-
-        <div class="circle--secondary--module">
-            <div class="circle--primary--avatar">
-                <img src="{% static '/media/' %}{{ user.avatar }}" alt="my image" width="100%"/>
+    <div class="bounds circle--page">
+        <div class="circle--page--header circle--fluid">
+            <div class="circle--fluid--cell circle--fluid--primary">
+                <h2>Profile</h2>
+            </div>
+            <div class="circle--fluid--cell circle--fluid--secondary">
+                <a class="button icon-on-left" href="{% url 'accounts:edit_profile' pk=user.pk %}">Edit</a>
             </div>
         </div>
 
-        <div class="circle--secondary--module">
-            <h4>My Skills</h4>
-            <ul class="unloaded">
-                {% for user_skill in user.user_skill_rel.all %}
-                <li>{{ user_skill.skill }}</li>
-                {% endfor %}
-            </ul>
-        </div>
-
-        <div class="circle--secondary--module">
-            <h4>My Projects</h4>
-            <ul class="circle--link--list">
-                {% for project in user.projects.all %}
-                {% if not project.concluded %}
-                <li><a href="#">{{ project.title }}</a></li>
+        <div class="grid-70">
+            <h1>{% if user.display_name %}
+                {{ user.display_name }}
+            {% else %}
+                Your name (edit to add)
+            {% endif %}</h1>
+            <div class="circle--article--body">
+                {% if user.bio %}
+                    {{ user.bio }}
+                {% else %}
+                    Your bio (edit to add)
                 {% endif %}
-                {% endfor %}
-            </ul>
+            </div>
         </div>
-    </div>
 
-</div>
+        <div class="grid-25 grid-push-5">
+
+            <div class="circle--secondary--module">
+                <div class="circle--primary--avatar">
+                    {% if user.avatar %}
+                        <img src="{% static '/media/' %}{{ user.avatar }}" alt="my image" width="100%"/>
+                    {% endif %}
+                </div>
+            </div>
+
+            <div class="circle--secondary--module">
+                <h4>My Skills</h4>
+                <ul class="unloaded">
+                    {% for user_skill in user.user_skill_rel.all %}
+                        <li>{{ user_skill.skill }}</li>
+                    {% endfor %}
+                </ul>
+            </div>
+
+            <div class="circle--secondary--module">
+                <h4>My Projects</h4>
+                <ul class="circle--link--list">
+                    {% for project in user.projects.all %}
+                        {% if not project.concluded %}
+                            <li><a href="#">{{ project.title }}</a></li>
+                        {% endif %}
+                    {% endfor %}
+                </ul>
+            </div>
+        </div>
+
+    </div>
 {% endblock %}
